[Add] new css and sass content

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -129,7 +129,7 @@ def3
 
 def-code
     font-family: Courier, "Lucida Console", monospace 
-    font-size: 1.6rem
+    font-size: 1.5rem
     color: $grayd0
     background: $gray10
     padding: 0 0.5rem
@@ -140,5 +140,22 @@ ul
     li ul
         margin-left: 2rem
         list-style-type: square
+
+    li ol
+        margin-left: 2rem
+
 // ul li li
 //     list-style-type: none
+
+    
+table 
+    margin-top: 2rem
+    border: 1px solid black
+
+    tr:nth-child(odd)
+        background-color: #eeeeee
+
+        td
+            background-color: #eeeeee
+
+    // color: #fff
