--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ def3 {
 
 def-code {
   font-family: Courier, "Lucida Console", monospace;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   color: #d0d0d0;
   background: #101010;
   padding: 0 0.5rem;
@@ -125,3 +125,13 @@ ul {
   ul li ul {
     margin-left: 2rem;
     list-style-type: square; }
+  ul li ol {
+    margin-left: 2rem; }
+
+table {
+  margin-top: 2rem;
+  border: 1px solid black; }
+  table tr:nth-child(odd) {
+    background-color: #eeeeee; }
+    table tr:nth-child(odd) td {
+      background-color: #eeeeee; }
