--- a/sass/main.sass
+++ b/sass/main.sass
@@ -87,8 +87,8 @@ header
     margin: 1rem
     padding: 0 2rem
     display: none
-    &-git
-        display: block
+    // &-git
+    //     display: block
 
 .main-title
     text-align: center
