--- a/views/git.html
+++ b/views/git.html
@@ -49,7 +49,7 @@
 </div>
 
 <div class="block">
-    <def1>.gitignore</def1>
+    <def1>gitignore</def1>
     <ul>
         <li>File where we specify wich files and folder want to be ignored by git, for example unnecessary libraries, node_modules, keyFiles, etc.</li>
         <li>.DS_Store will ignore files named .DS_Store</li>
@@ -79,7 +79,7 @@
 
 
 <div class="block">
-    <def1>HEAD -> master</def1>
+    <def1>HEAD arrow master</def1>
     <ul>
         <li>Head refers to master(last commit).</li>
         <li>IBranches are like bookmarks in a book, head is a reference to the current branch last commit.</li>
@@ -115,7 +115,7 @@
 </div>
 
 <div class="block">
-    <def2>Git commands</def2>
+    <def1>Git commands</def1>
     <ul>
         <li><def-code>git status</def-code> gives information on the current status of a git repository and its contents.</li>
         <br>
