--- a/sass/main.sass
+++ b/sass/main.sass
@@ -75,6 +75,7 @@ header
         margin: 0 0.5rem
         padding: 1rem
         transition: color 0.2s
+        position: relative
 
         &--selected
             color: $hover
@@ -83,10 +84,49 @@ header
             color: $hover
             cursor: pointer
 
+            & .nav_item_flex-container
+                display: flex
+                margin-top: 1rem
+
+
+
+
+
+        &_flex-container
+            color: white
+            display: none
+            position: absolute
+            background: inherit
+            background: #303030
+            padding: 1rem
+            box-shadow: none
+            flex-direction: column
+
+
+            &-item
+                padding: 0.2rem
+                white-space: nowrap
+                &:hover
+                    color: yellow
+                    cursor: pointer
+
+                &--sec
+                    margin-left: 2rem
+                    &:hover
+                        color: pink
+
+                        cursor: pointer
+
+                &--third
+                    margin-left: 4rem
+                    &:hover
+                        color: $hover
+                        cursor: pointer
 .section
     margin: 1rem
     padding: 0 2rem
     display: none
+    // visibility: hidden
     // &-git
     //     display: block
 
