--- a/views/git.html
+++ b/views/git.html
@@ -82,7 +82,7 @@
     <def1>HEAD arrow master</def1>
     <ul>
         <li>Head refers to master(last commit).</li>
-        <li>IBranches are like bookmarks in a book, head is a reference to the current branch last commit.</li>
+        <li>Branches are like bookmarks in a book, head is a reference to the current branch last commit.</li>
     </ul>
 </div>
 
