--- a/sass/main.sass
+++ b/sass/main.sass
@@ -36,7 +36,8 @@ main
     padding: 8rem 0
 
 nav
-    width: 1080px
+    width: 100%
+    max-width: 1080px
     position: fixed
     top: 0
     z-index: 999
@@ -192,10 +193,46 @@ table
     margin-top: 2rem
     border: 1px solid black
 
-    tr:nth-child(odd)
+    tr 
+        td
+        padding-left: 2rem
+
+        td:first-child
+            color: blue
+            font-weight: bold
+
+    tr:nth-child(2n+1)
         background-color: #eeeeee
 
         td
             background-color: #eeeeee
 
     // color: #fff
+
+
+.loader
+    z-index: 9999
+    display: none
+    position: fixed
+    width: 100%
+    height: 100%
+    background: #cdf6fd86
+
+    &_text
+        position: fixed
+        text-align: center
+        top: 50vh
+        transform: translateY(-50%)
+        width: 100%
+        background: rgba(255, 255, 255, 0.502)
+        line-height: 5rem
+        font-size: 1.7rem
+        font-weight: bold
+        padding-bottom: 1rem
+
+    & .dot-pulse
+        position: fixed
+        top: 50vh
+        margin-left: 50%
+        color: black
+        transform: translate(-50%, 130%)
