Fix css autogenerated files

--- a/css/main.css
+++ b/css/main.css
@@ -230,4 +230,4 @@ table tr:nth-child(2n+1) td {
   margin-left: 50%;
   color: black;
   transform: translate(-50%, 130%);
-}/*# sourceMappingURL=main.css.map */
+}
