Add about section

--- a/views/html.html
+++ b/views/html.html
@@ -30,7 +30,7 @@
     <ul>
         <li>The link element allows authors to link their document to other resources.</li>
         <li>It's ARE a selfclosing element <def-code>&ltlink hfref="" rel:"" &gt</def-code>.</li>
-        <li>It <strong>must</strong> contain a <em>href</em> attribute wiwhich must be present and must contain a valid non-empty URL potentially surrounded by spaces.</li>
+        <li>It <strong>must</strong> contain a <em>href</em> attribute which must be present and must contain a valid non-empty URL potentially surrounded by spaces.</li>
         <li>It <strong>must</strong> contain a <em>rel</em> attribute, which, if present, must have a value that is a set of space-separated tokens. 'stylesheet'</li>
     </ul>
 </div>
