--- a/views/sass.html
+++ b/views/sass.html
@@ -772,13 +772,15 @@
       In grid align is allways vertical and justify horizontal,
       Both have the alignt self / justify self prop in the child wich overrydes the content prop
 
-      Justify content alignts the grid inside the contener (when the grid rows / columns ) are smaller than the conainer,
+      Justify content alignts the grid inside the contener (when the grid rows / columns )
+      are smaller than the conainer,
 
       We can> justify content : space-between, center, start, end, space around, space evenly
 
 
 
-      With grid auto flow: if we have bigger items, there may be empty spaces in the grid, to fix this we can
+      With grid auto flow: if we have bigger items, there may be empty spaces in the grid, to fix
+      this we can
 
       Grid auto flow : row dense .. to fill empty spaces
 
@@ -809,9 +811,11 @@
       width: 1000px
       grid-template-columns:repeat(auto-fill, 100px) it will create 10 columns
 
-      grid-template-columns:repeat(auto-fit, 100px) it will create 10 columns but collapse the unused columns to 0 (we can then center the grid)
+      grid-template-columns:repeat(auto-fit, 100px) it will create 10 columns but collapse the
+      unused columns to 0 (we can then center the grid)
 
-      grid-template-columns:repeat(auto-fit, minamx(100px, 1fr) – will expand all the items to fill the container
+      grid-template-columns:repeat(auto-fit, minamx(100px, 1fr) – will expand all the items to
+      fill the container
 
                               </pre>
                             </li>
