--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
-  scrollbar-color: crimson black;
+  scrollbar-color: yellow black;
 }
 
 *,
@@ -25,10 +25,12 @@ body {
   font-size: 1.5rem;
   background: #101010;
   font-family: "Merriweather", serif;
+  text-rendering: optimizelegibility !important;
+  color: black;
 }
 
 main {
-  background: #d0d0d0;
+  background: white;
   width: 1080px;
   margin: 0 auto;
   min-height: 100.1vh;
@@ -50,7 +52,7 @@ header {
   font-size: 1.8rem;
   font-weight: bold;
   background: #202020;
-  color: crimson;
+  color: yellow;
   font-style: italic;
 }
 
@@ -80,10 +82,10 @@ header {
   position: relative;
 }
 .nav_item--selected {
-  color: crimson;
+  color: yellow;
 }
 .nav_item:hover {
-  color: crimson;
+  color: yellow;
   cursor: pointer;
 }
 .nav_item:hover .nav_item_flex-container {
@@ -99,6 +101,7 @@ header {
   padding: 1rem;
   box-shadow: none;
   flex-direction: column;
+  border-radius: 0px 0px 10px 10px;
 }
 .nav_item_flex-container-item {
   padding: 0.2rem;
@@ -112,15 +115,18 @@ header {
   margin-left: 2rem;
 }
 .nav_item_flex-container-item--sec:hover {
-  color: pink;
+  color: lime;
   cursor: pointer;
 }
 .nav_item_flex-container-item--third {
   margin-left: 4rem;
 }
 .nav_item_flex-container-item--third:hover {
-  color: #87eaf3;
+  color: cyan;
   cursor: pointer;
+}
+.nav_item:last-child {
+  margin-left: auto;
 }
 
 .section {
@@ -156,21 +162,21 @@ def3 {
 }
 
 def1 {
-  background: repeating-linear-gradient(90deg, transparent -10%, yellow 50%, transparent 110%);
+  background: repeating-linear-gradient(90deg, transparent -120%, yellow 20%, transparent 120%);
 }
 
 def2 {
-  background: repeating-linear-gradient(90deg, transparent -10%, pink 50%, transparent 110%);
+  background: repeating-linear-gradient(90deg, transparent -120%, cyan 20%, transparent 120%);
 }
 
 def3 {
-  background: repeating-linear-gradient(90deg, transparent -10%, cyan 50%, transparent 110%);
+  background: repeating-linear-gradient(90deg, transparent -120%, lime 20%, transparent 120%);
 }
 
 def-code {
   font-family: Courier, "Lucida Console", monospace;
   font-size: 1.5rem;
-  color: #d0d0d0;
+  color: white;
   background: #101010;
   padding: 0 0.5rem;
   border-radius: 3px;
@@ -211,7 +217,8 @@ table tr:nth-child(2n+1) td {
   position: fixed;
   width: 100%;
   height: 100%;
-  background: rgba(205, 246, 253, 0.5254901961);
+  background: rgba(0, 0, 0, 0.6666666667);
+  text-align: center;
 }
 .loader_text {
   position: fixed;
@@ -231,4 +238,17 @@ table tr:nth-child(2n+1) td {
   margin-left: 50%;
   color: black;
   transform: translate(-50%, 130%);
+}
+
+.img_brya7v {
+  visibility: 0.5;
+  border-radius: 50%;
+  position: fixed;
+  top: 50vh;
+  transform: translate(-50%, -70%);
+  opacity: 0.2;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 500px;
+  height: 500px;
 }
