--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,14 +1,13 @@
-$grayd0: #d0d0d0
 $gray30: #303030
 $gray20: #202020
 $gray10: #101010
-$hover: crimson
-$hover: #87eaf3
+$hover: yellow
+$hover: cyan
 
 html
     box-sizing: border-box
     font-size: 62.5%
-    scrollbar-color: crimson black 
+    scrollbar-color: yellow black 
 
 *,
 *::after,
@@ -30,9 +29,11 @@ body
     font-size: 1.5rem
     background: $gray10
     font-family: 'Merriweather', serif
+    text-rendering: optimizelegibility !important
+    color: black
 
 main
-    background: $grayd0
+    background: white
     width: 1080px
     margin: 0 auto
     min-height: 100.1vh
@@ -52,7 +53,7 @@ header
     font-size: 1.8rem
     font-weight: bold
     background: $gray20
-    color: crimson
+    color: yellow
     font-style: italic
 
 .nav
@@ -82,19 +83,15 @@ header
         position: relative
 
         &--selected
-            color: crimson
+            color: yellow
 
         &:hover
-            color: crimson
+            color: yellow
             cursor: pointer
 
             & .nav_item_flex-container
                 display: flex
                 margin-top: 1rem
-
-
-
-
 
         &_flex-container
             color: white
@@ -105,11 +102,13 @@ header
             padding: 1rem
             box-shadow: none
             flex-direction: column
+            border-radius: 0px 0px 10px 10px
 
 
             &-item
                 padding: 0.2rem
                 white-space: nowrap
+                
                 &:hover
                     color: yellow
                     cursor: pointer
@@ -117,8 +116,7 @@ header
                 &--sec
                     margin-left: 2rem
                     &:hover
-                        color: pink
-
+                        color: lime
                         cursor: pointer
 
                 &--third
@@ -126,6 +124,10 @@ header
                     &:hover
                         color: $hover
                         cursor: pointer
+
+    &_item:last-child
+        margin-left: auto
+
 .section
     margin: 1rem
     padding: 0 2rem
@@ -163,18 +165,19 @@ def3
     border-radius: 3px
 
 def1
-    background: repeating-linear-gradient(90deg, transparent -10%, yellow 50%, transparent 110%)
+    background: repeating-linear-gradient(90deg, transparent -120%, yellow 20%, transparent 120%)
 
 def2
-    background: repeating-linear-gradient(90deg, transparent -10%, pink 50%, transparent 110%)
+    background: repeating-linear-gradient(90deg, transparent -120%, cyan 20%, transparent 120%)
 
 def3
-    background: repeating-linear-gradient(90deg, transparent -10%, cyan 50%, transparent 110%)
+    background: repeating-linear-gradient(90deg, transparent -120%, lime 20%, transparent 120%)
+
 
 def-code
     font-family: Courier, "Lucida Console", monospace 
     font-size: 1.5rem
-    color: $grayd0
+    color: white
     background: $gray10
     padding: 0 0.5rem
     border-radius: 3px
@@ -218,7 +221,8 @@ table
     position: fixed
     width: 100%
     height: 100%
-    background: #cdf6fd86
+    background: #000000aa
+    text-align: center
 
     &_text
         position: fixed
@@ -240,4 +244,13 @@ table
         transform: translate(-50%, 130%)
 
 
-
+.img_brya7v
+    visibility: 0.5
+    border-radius: 50%
+    position: fixed
+    top: 50vh
+    transform: translate(-50%, -70%)
+    opacity: 0.2
+    object-fit: cover
+    width: 500px
+    height: 500px
