--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ html {
 }
 
 body {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   background: #101010;
   font-family: "Merriweather", serif;
   text-rendering: optimizelegibility !important;
@@ -49,7 +49,7 @@ header {
   height: 3rem;
   line-height: 3rem;
   text-align: center;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-weight: bold;
   background: #202020;
   color: yellow;
@@ -57,7 +57,7 @@ header {
 }
 
 .nav {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   position: fixed;
   top: 3rem;
   background: #303030;
@@ -137,7 +137,7 @@ header {
 
 .main-title {
   text-align: center;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-weight: bold;
   margin: 1rem 0;
 }
@@ -162,20 +162,20 @@ def3 {
 }
 
 def1 {
-  background: repeating-linear-gradient(90deg, transparent -120%, yellow 20%, transparent 120%);
+  background: repeating-linear-gradient(90deg, transparent -120%, yellow 0%, transparent 120%);
 }
 
 def2 {
-  background: repeating-linear-gradient(90deg, transparent -120%, cyan 20%, transparent 120%);
+  background: repeating-linear-gradient(90deg, transparent -120%, cyan 0%, transparent 120%);
 }
 
 def3 {
-  background: repeating-linear-gradient(90deg, transparent -120%, lime 20%, transparent 120%);
+  background: repeating-linear-gradient(90deg, transparent -120%, lime 0%, transparent 120%);
 }
 
 def-code {
   font-family: Courier, "Lucida Console", monospace;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   color: white;
   background: #101010;
   padding: 0 0.5rem;
@@ -228,7 +228,7 @@ table tr:nth-child(2n+1) td {
   width: 100%;
   background: rgba(255, 255, 255, 0.502);
   line-height: 5rem;
-  font-size: 1.7rem;
+  font-size: 1.5rem;
   font-weight: bold;
   padding-bottom: 1rem;
 }
@@ -251,4 +251,28 @@ table tr:nth-child(2n+1) td {
      object-fit: cover;
   width: 500px;
   height: 500px;
+}
+
+.poblem-solution__container {
+  background: #303030;
+  border: 1px solid black;
+  padding: 1rem;
+  border-radius: 15px;
+  margin: 1rem auto 3rem auto;
+  color: white;
+}
+
+.poblem-solution__title {
+  margin-bottom: 1rem;
+  background: repeating-linear-gradient(90deg, transparent -120%, cyan 0%, transparent 100%);
+  padding: 0 0.5rem;
+  font-weight: bold;
+  border-radius: 3px;
+  color: black;
+}
+
+.poblem-solution__pre {
+  font-family: Courier, "Lucida Console", monospace;
+  font-size: 1.3rem;
+  color: white;
 }
