--- a/sass/main.sass
+++ b/sass/main.sass
@@ -26,7 +26,7 @@ html
         display: table
 
 body
-    font-size: 1.5rem
+    font-size: 1.3rem
     background: $gray10
     font-family: 'Merriweather', serif
     text-rendering: optimizelegibility !important
@@ -50,14 +50,14 @@ header
     height: 3rem
     line-height: 3rem
     text-align: center
-    font-size: 1.8rem
+    font-size: 1.6rem
     font-weight: bold
     background: $gray20
     color: yellow
     font-style: italic
 
 .nav
-    font-size: 1.4rem
+    font-size: 1.2rem
     position: fixed
     top: 3rem
     background: #303030
@@ -138,7 +138,7 @@ header
 
 .main-title
     text-align: center
-    font-size: 1.8rem
+    font-size: 1.6rem
     font-weight: bold
     margin: 1rem 0
 
@@ -165,18 +165,18 @@ def3
     border-radius: 3px
 
 def1
-    background: repeating-linear-gradient(90deg, transparent -120%, yellow 20%, transparent 120%)
+    background: repeating-linear-gradient(90deg, transparent -120%, yellow 0%, transparent 120%)
 
 def2
-    background: repeating-linear-gradient(90deg, transparent -120%, cyan 20%, transparent 120%)
+    background: repeating-linear-gradient(90deg, transparent -120%, cyan 0%, transparent 120%)
 
 def3
-    background: repeating-linear-gradient(90deg, transparent -120%, lime 20%, transparent 120%)
+    background: repeating-linear-gradient(90deg, transparent -120%, lime 0%, transparent 120%)
 
 
 def-code
     font-family: Courier, "Lucida Console", monospace 
-    font-size: 1.5rem
+    font-size: 1.3rem
     color: white
     background: $gray10
     padding: 0 0.5rem
@@ -232,7 +232,7 @@ table
         width: 100%
         background: rgba(255, 255, 255, 0.502)
         line-height: 5rem
-        font-size: 1.7rem
+        font-size: 1.5rem
         font-weight: bold
         padding-bottom: 1rem
 
@@ -254,3 +254,25 @@ table
     object-fit: cover
     width: 500px
     height: 500px
+
+
+.poblem-solution__container
+    background: $gray30
+    border: 1px solid black
+    padding: 1rem
+    border-radius: 15px
+    margin: 1rem auto 3rem auto
+    color: white
+
+.poblem-solution__title
+    margin-bottom: 1rem
+    background: repeating-linear-gradient(90deg, transparent -120%, cyan 0%, transparent 100%)
+    padding: 0 0.5rem
+    font-weight: bold
+    border-radius: 3px
+    color: black
+
+.poblem-solution__pre
+    font-family: Courier, "Lucida Console", monospace 
+    font-size: 1.3rem
+    color: white
