--- a/views/problems.html
+++ b/views/problems.html
@@ -1,191 +1,323 @@
 <div class="block">
-    <def1>1.Two sum</def1>
-    <div class="problem-desc">    
-        <div class="content__u3I1 question-content__JfgR"><div><p>Given an array of integers <code>nums</code>&nbsp;and an integer <code>target</code>, return <em>indices of the two numbers such that they add up to <code>target</code></em>.</p>
-
-            <p>You may assume that each input would have <strong><em>exactly</em> one solution</strong>, and you may not use the <em>same</em> element twice.</p>
-
-            <p>You can return the answer in any order.</p>
-            
-            <p>&nbsp;</p>
-            <p><strong>Example 1:</strong></p>
-            
-            <pre><strong>Input:</strong> nums = [2,7,11,15], target = 9
-            <strong>Output:</strong> [0,1]
-            <strong>Explanation:</strong> Because nums[0] + nums[1] == 9, we return [0, 1].
-            </pre>
-            
-            <p><strong>Example 2:</strong></p>
-            
-            <pre><strong>Input:</strong> nums = [3,2,4], target = 6
-            <strong>Output:</strong> [1,2]
-            </pre>
-            
-            <p><strong>Example 3:</strong></p>
-            
-            <pre><strong>Input:</strong> nums = [3,3], target = 6
-            <strong>Output:</strong> [0,1]
-            </pre>
-            
-            <p>&nbsp;</p>
-            <p><strong>Constraints:</strong></p>
-            
-            <ul>
-                <li><code>2 &lt;= nums.length &lt;= 10<sup>4</sup></code></li>
-                <li><code>-10<sup>9</sup> &lt;= nums[i] &lt;= 10<sup>9</sup></code></li>
-                <li><code>-10<sup>9</sup> &lt;= target &lt;= 10<sup>9</sup></code></li>
-                <li><strong>Only one valid answer exists.</strong></li>
-            </ul>
-            
-            <p>&nbsp;</p>
-            <strong>Follow-up:&nbsp;</strong>Can you come up with an algorithm that is less than&nbsp;<code>O(n<sup>2</sup>)&nbsp;</code>time complexity?</div>
-        </div>
-    </div>
-
-    <pre>
-
-        /**
-        * @param {number[]} nums
-        * @param {number} target
-        * @return {number[]}
-        */
-        var twoSum = function(nums, target) {
-            var map = new Map()
-            var index1, index2
-            nums.some( (e, index) => {
-                //search the index on the hasmap of the value thats = target - e. So value + e = target. If 
-                if(map.get(target-e) == null) map.set(e, index)                    
-                else {
-                    index1 = index
-                    index2 = map.get(target-e) 
-                    return true
-                }
-            })        
-            return [index1, index2]
-        }
-
-        //same solution using obj instead of a map (under the hood objects workk like a hashmap)
-        //although is preferable the use of hashmaps     
-
-        var twoSum = function(nums, target) {
-            var obj = {}
-            var index1, index2
-            nums.some( (e, index) => {
-                if(obj[target-e] == null) obj[e] = index        
-                else {
-                    index1 = index
-                    index2 = obj[target-e]
-                    return true
-                }
-            })        
-            return [index1, index2]
-        }
+    <def1>1. Two sum</def1>
+    <div>
+        <p>Given an array of integers <code>nums</code>&nbsp;and an integer <code>target</code>, return <em>indices of the two numbers such that they add up to <code>target</code></em>.</p>
+        <p>You may assume that each input would have <strong><em>exactly</em> one solution</strong>, and you may not use the <em>same</em> element twice.</p>
+        <p>You can return the answer in any order.</p>
         
-    </pre>
+        <p>&nbsp;</p>
+        <p><strong>Example 1:</strong></p>
+        
+        <pre><strong>Input:</strong> nums = [2,7,11,15], target = 9
+        <strong>Output:</strong> [0,1]
+        <strong>Explanation:</strong> Because nums[0] + nums[1] == 9, we return [0, 1].
+        </pre>
+        
+        <p><strong>Example 2:</strong></p>
+        
+        <pre><strong>Input:</strong> nums = [3,2,4], target = 6
+        <strong>Output:</strong> [1,2]
+        </pre>
+        
+        <p><strong>Example 3:</strong></p>
+        
+        <pre><strong>Input:</strong> nums = [3,3], target = 6
+        <strong>Output:</strong> [0,1]
+        </pre>
+        
+        <p>&nbsp;</p>
+        <p><strong>Constraints:</strong></p>
+        
+        <ul>
+            <li><code>2 &lt;= nums.length &lt;= 10<sup>4</sup></code></li>
+            <li><code>-10<sup>9</sup> &lt;= nums[i] &lt;= 10<sup>9</sup></code></li>
+            <li><code>-10<sup>9</sup> &lt;= target &lt;= 10<sup>9</sup></code></li>
+            <li><strong>Only one valid answer exists.</strong></li>
+        </ul>
+        
+        <p>&nbsp;</p>
+        <strong>Follow-up:&nbsp;</strong>Can you come up with an algorithm that is less than&nbsp;<code>O(n<sup>2</sup>)&nbsp;</code>time complexity?
+    </div>
+    
+    <div class="poblem-solution__container">
+        <div class="poblem-solution__title">Solution 1:</div>
+        <pre class="poblem-solution__pre">
+            /**
+            * @param {number[]} nums
+            * @param {number} target
+            * @return {number[]}
+            */
+            var twoSum = function(nums, target) {
+                var map = new Map()
+                var index1, index2
+                nums.some( (e, index) => {
+                    //search the index on the hasmap of the value thats = target - e. So value + e = target. If 
+                    if(map.get(target-e) == null) map.set(e, index)                    
+                    else {
+                        index1 = index
+                        index2 = map.get(target-e) 
+                        return true
+                    }
+                })        
+                return [index1, index2]
+            }
+        </pre>
+        <div class="poblem-solution__title">Solution 2:</div>
+
+
+        <pre  class="poblem-solution">
+            //same solution using obj instead of a map (under the hood objects workk like a hashmap)
+            //although is preferable the use of hashmaps     
+
+            /**
+            * @param {number[]} nums
+            * @param {number} target
+            * @return {number[]}
+            */
+            var twoSum = function(nums, target) {
+                var obj = {}
+                var index1, index2
+                nums.some( (e, index) => {
+                    if(obj[target-e] == null) obj[e] = index        
+                    else {
+                        index1 = index
+                        index2 = obj[target-e]
+                        return true
+                    }
+                })        
+                return [index1, index2]
+            }            
+        </pre>
+    </div>
 </div>
 
 
 <div class="block">
     <def1>2. Add Two Numbers</def1>
-    <div class="problem-desc">    
-<div><p>You are given two <strong>non-empty</strong> linked lists representing two non-negative integers. The digits are stored in <strong>reverse order</strong>, and each of their nodes contains a single digit. Add the two numbers and return the sum&nbsp;as a linked list.</p>
+    <div>
+        <p>You are given two <strong>non-empty</strong> linked lists representing two non-negative integers. The digits are stored in <strong>reverse order</strong>, and each of their nodes contains a single digit. Add the two numbers and return the sum&nbsp;as a linked list.</p>
 
-    <p>You may assume the two numbers do not contain any leading zero, except the number 0 itself.</p>
-    
-    <p>&nbsp;</p>
-    <p><strong>Example 1:</strong></p>
-    <img alt="" src="https://assets.leetcode.com/uploads/2020/10/02/addtwonumber1.jpg" style="margin:20px; width: 240px; height: 170px;">
-    <pre><strong>Input:</strong> l1 = [2,4,3], l2 = [5,6,4]
-    <strong>Output:</strong> [7,0,8]
-    <strong>Explanation:</strong> 342 + 465 = 807.
-    </pre>
-    
-    <p><strong>Example 2:</strong></p>
-    
-    <pre><strong>Input:</strong> l1 = [0], l2 = [0]
-    <strong>Output:</strong> [0]
-    </pre>
-    
-    <p><strong>Example 3:</strong></p>
-    
-    <pre><strong>Input:</strong> l1 = [9,9,9,9,9,9,9], l2 = [9,9,9,9]
-    <strong>Output:</strong> [8,9,9,9,0,0,0,1]
-    </pre>
-    
-    <p>&nbsp;</p>
-    <p><strong>Constraints:</strong></p>
-    
-    <ul>
-        <li>The number of nodes in each linked list is in the range <code>[1, 100]</code>.</li>
-        <li><code>0 &lt;= Node.val &lt;= 9</code></li>
-        <li>It is guaranteed that the list represents a number that does not have leading zeros.</li>
-    </ul>
+        <p>You may assume the two numbers do not contain any leading zero, except the number 0 itself.</p>
+        
+        <p>&nbsp;</p>
+        <p><strong>Example 1:</strong></p>
+        <img alt="" src="https://assets.leetcode.com/uploads/2020/10/02/addtwonumber1.jpg" style="margin:20px; width: 240px; height: 170px;">
+        <pre><strong>Input:</strong> l1 = [2,4,3], l2 = [5,6,4]
+        <strong>Output:</strong> [7,0,8]
+        <strong>Explanation:</strong> 342 + 465 = 807.
+        </pre>
+        
+        <p><strong>Example 2:</strong></p>
+        
+        <pre><strong>Input:</strong> l1 = [0], l2 = [0]
+        <strong>Output:</strong> [0]
+        </pre>
+        
+        <p><strong>Example 3:</strong></p>
+        
+        <pre><strong>Input:</strong> l1 = [9,9,9,9,9,9,9], l2 = [9,9,9,9]
+        <strong>Output:</strong> [8,9,9,9,0,0,0,1]
+        </pre>
+        
+        <p>&nbsp;</p>
+        <p><strong>Constraints:</strong></p>
+        
+        <ul>
+            <li>The number of nodes in each linked list is in the range <code>[1, 100]</code>.</li>
+            <li><code>0 &lt;= Node.val &lt;= 9</code></li>
+            <li>It is guaranteed that the list represents a number that does not have leading zeros.</li>
+        </ul>
     </div>
     
+    <div class="poblem-solution__container">
 
-    <pre style="border: 1px solid black;">
-        var addTwoNumbers = function(l1, l2) {
-    
-            let num1='', num2='', sum=0
-            
-            num1 = getListNodeValue(l1)
-            num2 = getListNodeValue(l2)
-            sum = num1+num2    
-            
-            sum = sum.toString()
-            
-            let nodesArray = []
-            
-            sum.split("").reverse().forEach((e, idx )=> {
-                nodesArray.push(new ListNode(e))        
-                if(idx > 0) nodesArray[idx-1].next = nodesArray[idx]            
-            })
-            
-            return nodesArray[0]
-            
-            function getListNodeValue(ln){
-                let arr =[], next = ln
-                do{
-                    arr.push(next.val)
-                    next = next.next          
-                }while(next != null)
-                return BigInt(arr.reverse().join(""))
-            }    
-        }
+        <div class="poblem-solution__title">Solution 1:</div>
+        <pre class="poblem-solution__pre">
+            var addTwoNumbers = function(l1, l2) {
         
-        var addTwoNumbers = function(l1, l2) {
+                let num1='', num2='', sum=0
+                
+                num1 = getListNodeValue(l1)
+                num2 = getListNodeValue(l2)
+                sum = num1+num2    
+                
+                sum = sum.toString()
+                
+                let nodesArray = []
+                
+                sum.split("").reverse().forEach((e, idx )=> {
+                    nodesArray.push(new ListNode(e))        
+                    if(idx > 0) nodesArray[idx-1].next = nodesArray[idx]            
+                })
+                
+                return nodesArray[0]
+                
+                function getListNodeValue(ln){
+                    let arr =[], next = ln
+                    do{
+                        arr.push(next.val)
+                        next = next.next          
+                    }while(next != null)
+                    return BigInt(arr.reverse().join(""))
+                }    
+            }
+        </pre>
+        <div class="poblem-solution__title">Solution 2:</div>
+        <pre class="poblem-solution__pre">
+            var addTwoNumbers = function(l1, l2) {
+                
+                let num1='', num2='', sum=0
+                
+                num1 = getListNodeValue(l1)
+                num2 = getListNodeValue(l2)
+                sum = num1+num2    
+                sum = sum.toString()
+                
+                let node
+                
+                sum.split("").forEach((e, idx )=> {
+                    if(idx == 0) node = new ListNode(e)
+                    else {
+                        let newNode = new ListNode(e)
+                        newNode.next = node
+                        node = newNode
+                    }       
+                })
+                return node
+                
+                function getListNodeValue(ln){
+                    let arr =[], next = ln
+                    do{
+                        arr.push(next.val)
+                        next = next.next          
+                    }while(next != null)
+                    return BigInt(arr.reverse().join(""))
+                }    
+            }
             
-            let num1='', num2='', sum=0
-            
-            num1 = getListNodeValue(l1)
-            num2 = getListNodeValue(l2)
-            sum = num1+num2    
-            sum = sum.toString()
-            
-            let node
-            
-            sum.split("").forEach((e, idx )=> {
-                if(idx == 0) node = new ListNode(e)
-                else {
-                    let newNode = new ListNode(e)
-                    newNode.next = node
-                    node = newNode
-                }       
-            })
-            return node
-            
-            function getListNodeValue(ln){
-                let arr =[], next = ln
-                do{
-                    arr.push(next.val)
-                    next = next.next          
-                }while(next != null)
-                return BigInt(arr.reverse().join(""))
-            }    
-        }
-        
-        //a less messy solution should add the numbers one by one with an overflow instead of using the BigInt
-        //addTwoNumbers([2,4,3], [5,6,4])
-    </pre>
+            //a less messy solution should add the numbers one by one with an overflow instead of using the BigInt
+            //addTwoNumbers([2,4,3], [5,6,4])
+        </pre>
+    </div>
+</div>
 
+
+
+<div class="block">
+    <def1>3. Longest Substring Without Repeating Charact</def1>
+    <div>    
+        <p>Given a string <code>s</code>, find the length of the <strong>longest substring</strong> without repeating characters.</p>
+
+        <p>&nbsp;</p>
+        <p><strong>Example 1:</strong></p>
+        
+        <pre><strong>Input:</strong> s = "abcabcbb"
+        <strong>Output:</strong> 3
+        <strong>Explanation:</strong> The answer is "abc", with the length of 3.
+        </pre>
+        
+        <p><strong>Example 2:</strong></p>
+        
+        <pre><strong>Input:</strong> s = "bbbbb"
+        <strong>Output:</strong> 1
+        <strong>Explanation:</strong> The answer is "b", with the length of 1.
+        </pre>
+        
+        <p><strong>Example 3:</strong></p>
+        
+        <pre><strong>Input:</strong> s = "pwwkew"
+        <strong>Output:</strong> 3
+        <strong>Explanation:</strong> The answer is "wke", with the length of 3.
+        Notice that the answer must be a substring, "pwke" is a subsequence and not a substring.
+        </pre>
+        
+        <p>&nbsp;</p>
+        <p><strong>Constraints:</strong></p>
+        
+        <ul>
+            <li><code>0 &lt;= s.length &lt;= 5 * 10<sup>4</sup></code></li>
+            <li><code>s</code> consists of English letters, digits, symbols and spaces.</li>
+        </ul>
+    </div>
+    <div class="poblem-solution__container">
+
+        <div class="poblem-solution__title">Solution 1:</div>
+        <pre class="poblem-solution__pre">
+            /**
+            * @param {string} s
+            * @return {number}
+            */
+            var lengthOfLongestSubstring = function(s) {
+                let subs = ""
+                let longest = 0
+                s.split("").forEach( e=> {
+                    if(subs.includes(e)) subs = subs.substring(subs.indexOf(e)+1)
+                    subs += e        
+                    if(longest < subs.length) longest = subs.length
+                })
+                return longest
+            };
+        </pre>
+    </div>
+</div>
+
+
+<div class="block">
+    <def1>4. Median of Two Sorted Arrays </def1>
+    <div>
+        <p>Given two sorted arrays <code>nums1</code> and <code>nums2</code> of size <code>m</code> and <code>n</code> respectively, return <strong>the median</strong> of the two sorted arrays.</p>
+
+        <p>The overall run time complexity should be <code>O(log (m+n))</code>.</p>
+        
+        <p>&nbsp;</p>
+        <p><strong>Example 1:</strong></p>
+        
+        <pre><strong>Input:</strong> nums1 = [1,3], nums2 = [2]
+        <strong>Output:</strong> 2.00000
+        <strong>Explanation:</strong> merged array = [1,2,3] and median is 2.
+        </pre>
+        
+        <p><strong>Example 2:</strong></p>
+        
+        <pre><strong>Input:</strong> nums1 = [1,2], nums2 = [3,4]
+        <strong>Output:</strong> 2.50000
+        <strong>Explanation:</strong> merged array = [1,2,3,4] and median is (2 + 3) / 2 = 2.5.
+        </pre>
+        
+        <p>&nbsp;</p>
+        <p><strong>Constraints:</strong></p>
+        
+        <ul>
+            <li><code>nums1.length == m</code></li>
+            <li><code>nums2.length == n</code></li>
+            <li><code>0 &lt;= m &lt;= 1000</code></li>
+            <li><code>0 &lt;= n &lt;= 1000</code></li>
+            <li><code>1 &lt;= m + n &lt;= 2000</code></li>
+            <li><code>-10<sup>6</sup> &lt;= nums1[i], nums2[i] &lt;= 10<sup>6</sup></code></li>
+        </ul>
+    </div>
+    <div class="poblem-solution__container">
+
+        <div class="poblem-solution__title">Solution 1:</div>
+        <pre class="poblem-solution__pre">        
+            /**
+            * @param {number[]} nums1
+            * @param {number[]} nums2
+            * @return {number}
+            */
+            var findMedianSortedArrays = function(nums1, nums2) {
+                let arr = [...nums1, ...nums2]
+                arr.sort(function(a, b) {
+                    if( a === Infinity ) return 1
+                    else if( isNaN(a)) return -1
+                    else return a - b;
+                }) 
+            
+                console.log(arr)
+                let len = arr.length
+                if(len == 1) return arr[0]    
+                return len % 2 != 0 ? arr[Math.floor(len/2)] : (arr[Math.floor(len/2)-1]+arr[Math.floor(len/2)])/2    
+            }            
+        </pre>
+    </div>
 </div>
